# python-closed-template

./: AI.md  AI_CONTEXT.md  Makefile  PROJECT_CONTEXT.md  README-jp.md  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
ai/context/: coding_rules.md  dependency_graph.md  module_index.md
ai/review/: review_checklist.md
ai/tasks/: fix_bug.md  implement_feature.md  write_test.md
docs/: development_rules.md  guardrails.md
tests/: conftest.py
tests/unit/: test_placeholder.py
